# Solite

./: CLAUDE.md  README.md  folder-structure.md  prd.md  todo.md
backend/: Cargo.toml  wallets-old.txt
backend/postman/: Custom-Phantom-Wallet-Auth.postman_collection.json
backend/src/: accounts.rs  config.rs  error_handler.rs  main.rs  utils.rs  wallets.rs
backend/src/api/: mod.rs  router.rs
backend/src/api/handlers/: accounts.rs  health.rs  mod.rs  wallets.rs
backend/src/api/handlers/solite/: google.rs  helpers.rs  login.rs  me.rs  mod.rs  privkey.rs  recovery.rs  refresh.rs  register.rs  sign.rs  users.rs  wallet_import.rs  wallet_new.rs
backend/src/api/middleware/: auth.rs
backend/src/api/routes/: accounts.rs  auth.rs  health.rs  mod.rs  user.rs  users.rs  wallets.rs
backend/src/solite/: encrypt.rs  keypair.rs  mod.rs  recovery.rs  wallet_service.rs
backend/src/solite/auth/: google.rs  jwt.rs  mod.rs  password.rs
backend/src/solite/db/: mod.rs  store.rs  user.rs  wallet.rs
frontend/: skills-lock.json
