[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4"] }
ed25519-dalek = "2"
bs58 = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "2.0.18"
